# KhaliForushi

./: .gitignore  pyproject.toml  requirements.txt
clients/: ravi.py  telegram.py
coverd_call/: admin.py  apps.py  tasks.py
coverd_call/migrations/: 0001_initial.py  0002_auto_20241227_2108.py  0003_coverdcalloptions_strick_price.py  0004_alter_coverdcalloptions_cover_call.py
option/: admin.py  apps.py  models.py  tasks.py
option/migrations/: 0002_auto_20241227_2108.py  0003_coverdcalloptions_strick_price.py  0004_alter_coverdcalloptions_cover_call.py
settings/: celery.py  settings.py
